Set up react-jobs

--- a/packages/react-scripts/template/src/server/views/react.html
+++ b/packages/react-scripts/template/src/server/views/react.html
@@ -4,5 +4,6 @@
   <div id="root">{{ appHtml | safe }}</div>
   <script>
     window.__reduxState__ = {{ reduxState | json | safe }};
+    window.{{ jobsStateId }} = {{ jobsState | json | safe }};
   </script>
 {% endblock %}
