Rethink, simplify, redux it

--- a/packages/react-scripts/template/src/server/views/react.html
+++ b/packages/react-scripts/template/src/server/views/react.html
@@ -3,7 +3,6 @@
 {% block content %}
   <div id="root">{{ appHtml | safe }}</div>
   <script>
-    window.__reduxState__ = {{ reduxState | json | safe }};
-    window.{{ jobsStateId }} = {{ jobsState | json | safe }};
+    window.__storeState__ = {{ storeState | json | safe }};
   </script>
 {% endblock %}
